# cp-templates

./: .clang-format  .clangd  CMakeLists.txt  default.cpp  segment_tree.hpp
algos/: dsu.hpp  fenwick_tree.hpp  hld.hpp  lazy_segment_tree.hpp  lazy_segment_tree_range.hpp  modint.hpp  rmq.hpp  segment_tree.hpp
tests/: CMakeLists.txt  test_dsu.cpp  test_fenwick_tree.cpp  test_hld.cpp  test_lazy_segment_tree.cpp  test_lazy_segment_tree_range.cpp  test_modint.cpp  test_rmp.cpp  test_segment_tree.cpp
